--- a/style.css
+++ b/style.css
@@ -22,6 +22,32 @@ html {
 
 }
 
+.resp-container {
+    position: absolute;
+    overflow: hidden;
+    padding-top: 56.25%;
+    right: 50px;
+    bottom: 10px;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.myvideo{
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  height: 200px;
+  width: 300px;
+
+}
+
 
 
 /* Blockly Toolbox styling*/
