--- a/style.css
+++ b/style.css
@@ -342,3 +342,22 @@ button {
   font-size: small;
   text-decoration: none;
 }
+
+#layer1 {
+  position: absolute;
+  top: 30px;
+  left: 600px;
+  z-index: 9;
+  background-color: #f1f1f1;
+  text-align: center;
+  border: 1px solid #d3d3d3;
+  visibility: hidden;
+}
+
+#mydivheader {
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  background-color: #2196F3;
+  color: #fff;
+}
