--- a/style.css
+++ b/style.css
@@ -344,20 +344,34 @@ button {
 }
 
 #layer1 {
+  padding: 4px;
   position: absolute;
   top: 30px;
   left: 600px;
+  resize: both;
+  overflow: auto;
   z-index: 9;
   background-color: #f1f1f1;
   text-align: center;
   border: 1px solid #d3d3d3;
   visibility: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
-#mydivheader {
+#player_header {
   padding: 10px;
   cursor: move;
   z-index: 10;
   background-color: #2196F3;
   color: #fff;
+}
+
+#player{
+
+  width:90%;
+  height:80%;
+  
+
+
 }
