--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ button {
   overflow-x: hidden;
 }
 
-#player_header {
+#playerheader {
   padding: 10px;
   cursor: move;
   z-index: 10;
@@ -371,7 +371,7 @@ button {
 
   width:90%;
   height:80%;
-  
+
 
 
 }
